--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
@@ -15,142 +16,144 @@
     "doc": "docs"
   },
   "dependencies": {
-    "array-union": "^2.1.0",
+    "@anys/ui": "^0.1.0",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
-    "autoprefixer": "^10.4.7",
-    "argparse": "^1.0.10",
     "anymatch": "^3.1.2",
+    "argparse": "^1.0.10",
+    "array-union": "^2.1.0",
+    "autoprefixer": "^10.4.7",
     "base64-js": "^1.5.1",
     "binary-extensions": "^2.2.0",
-    "braces": "^3.0.2",
     "bl": "^4.1.0",
+    "braces": "^3.0.2",
+    "browserslist": "^4.20.3",
     "buffer": "^5.7.1",
     "cac": "^6.7.12",
-    "browserslist": "^4.20.3",
-    "chokidar": "^3.5.3",
-    "cli-cursor": "^3.1.0",
     "caniuse-lite": "^1.0.30001341",
     "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
+    "cli-cursor": "^3.1.0",
     "cli-spinners": "^2.6.1",
     "clone": "^1.0.4",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
     "connect-history-api-fallback": "^1.6.0",
     "cross-spawn": "^7.0.3",
-    "dir-glob": "^3.0.1",
-    "defaults": "^1.0.3",
     "csstype": "^2.6.20",
-    "esbuild": "^0.14.39",
     "debug": "^4.3.4",
+    "defaults": "^1.0.3",
+    "dir-glob": "^3.0.1",
     "electron-to-chromium": "^1.4.137",
     "entities": "^3.0.1",
     "envinfo": "^7.8.1",
+    "esbuild": "^0.14.39",
     "esbuild-darwin-arm64": "^0.14.39",
-    "extend-shallow": "^2.0.1",
-    "estree-walker": "^2.0.2",
-    "esprima": "^4.0.1",
-    "execa": "^5.1.1",
     "escalade": "^3.1.1",
+    "esprima": "^4.0.1",
+    "estree-walker": "^2.0.2",
+    "execa": "^5.1.1",
+    "extend-shallow": "^2.0.1",
     "fast-glob": "^3.2.11",
     "fastq": "^1.13.0",
     "fill-range": "^7.0.1",
     "fraction.js": "^4.2.0",
-    "function-bind": "^1.1.1",
-    "glob-parent": "^5.1.2",
-    "color-convert": "^2.0.1",
     "fs-extra": "^10.1.0",
-    "graceful-fs": "^4.2.10",
-    "get-stream": "^6.0.1",
-    "globby": "^11.1.0",
     "fsevents": "^2.3.2",
+    "function-bind": "^1.1.1",
+    "get-stream": "^6.0.1",
+    "glob-parent": "^5.1.2",
+    "globby": "^11.1.0",
+    "graceful-fs": "^4.2.10",
+    "gray-matter": "^4.0.3",
     "has": "^1.0.3",
     "has-flag": "^4.0.0",
-    "gray-matter": "^4.0.3",
-    "color-name": "^1.1.4",
+    "hash-sum": "^2.0.0",
     "human-signals": "^2.1.0",
     "ieee754": "^1.2.1",
-    "inherits": "^2.0.4",
     "ignore": "^5.2.0",
     "immutable": "^4.0.0",
-    "is-glob": "^4.0.3",
+    "inherits": "^2.0.4",
+    "is-binary-path": "^2.1.0",
     "is-core-module": "^2.9.0",
-    "hash-sum": "^2.0.0",
     "is-extendable": "^0.1.1",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
     "is-interactive": "^1.0.0",
     "is-number": "^7.0.0",
-    "is-extglob": "^2.1.1",
-    "isexe": "^2.0.0",
-    "is-binary-path": "^2.1.0",
-    "kind-of": "^6.0.3",
     "is-stream": "^2.0.1",
     "is-unicode-supported": "^0.1.0",
-    "jsonfile": "^6.1.0",
-    "log-symbols": "^4.1.0",
+    "isexe": "^2.0.0",
     "js-yaml": "^3.14.1",
+    "jsonfile": "^6.1.0",
+    "kind-of": "^6.0.3",
     "linkify-it": "^4.0.1",
+    "log-symbols": "^4.1.0",
+    "magic-string": "^0.25.9",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-container": "^3.0.0",
-    "mdurl": "^1.0.1",
-    "merge2": "^1.4.1",
-    "mimic-fn": "^2.1.0",
-    "magic-string": "^0.25.9",
-    "merge-stream": "^2.0.0",
     "markdown-it-emoji": "^2.0.2",
-    "ms": "^2.1.2",
-    "normalize-range": "^0.1.2",
-    "micromatch": "^4.0.5",
-    "node-releases": "^2.0.4",
-    "onetime": "^5.1.2",
-    "nanoid": "^3.3.4",
-    "path-key": "^3.1.1",
-    "ora": "^5.4.1",
-    "npm-run-path": "^4.0.1",
-    "path-type": "^4.0.0",
-    "path-parse": "^1.0.7",
-    "picomatch": "^2.3.1",
-    "normalize-path": "^3.0.0",
-    "postcss-value-parser": "^4.2.0",
-    "picocolors": "^1.0.0",
-    "readdirp": "^3.6.0",
-    "postcss": "^8.4.14",
+    "mdurl": "^1.0.1",
     "medium-zoom": "^1.0.6",
-    "queue-microtask": "^1.2.3",
+    "merge-stream": "^2.0.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.5",
+    "mimic-fn": "^2.1.0",
+    "ms": "^2.1.2",
+    "nanoid": "^3.3.4",
+    "node-releases": "^2.0.4",
+    "normalize-path": "^3.0.0",
+    "normalize-range": "^0.1.2",
+    "npm-run-path": "^4.0.1",
+    "onetime": "^5.1.2",
+    "ora": "^5.4.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^4.0.0",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "postcss": "^8.4.14",
+    "postcss-value-parser": "^4.2.0",
     "prismjs": "^1.28.0",
+    "queue-microtask": "^1.2.3",
     "readable-stream": "^3.6.0",
-    "reusify": "^1.0.4",
+    "readdirp": "^3.6.0",
     "resolve": "^1.22.0",
-    "safe-buffer": "^5.2.1",
-    "run-parallel": "^1.2.0",
+    "restore-cursor": "^3.1.0",
+    "reusify": "^1.0.4",
     "rollup": "^2.74.0",
+    "run-parallel": "^1.2.0",
+    "safe-buffer": "^5.2.1",
+    "sass": "^1.51.0",
+    "section-matter": "^1.0.0",
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
-    "restore-cursor": "^3.1.0",
     "signal-exit": "^3.0.7",
-    "section-matter": "^1.0.0",
-    "source-map": "^0.6.1",
     "slash": "^3.0.0",
-    "sprintf-js": "^1.0.3",
-    "sass": "^1.51.0",
-    "strip-ansi": "^6.0.1",
-    "sourcemap-codec": "^1.4.8",
-    "string_decoder": "^1.3.0",
-    "strip-final-newline": "^2.0.0",
+    "source-map": "^0.6.1",
     "source-map-js": "^1.0.2",
-    "to-regex-range": "^5.0.1",
+    "sourcemap-codec": "^1.4.8",
+    "sprintf-js": "^1.0.3",
+    "string_decoder": "^1.3.0",
+    "strip-ansi": "^6.0.1",
     "strip-bom-string": "^1.0.0",
+    "strip-final-newline": "^2.0.0",
     "supports-color": "^7.2.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
-    "universalify": "^2.0.0",
+    "to-regex-range": "^5.0.1",
     "toml": "^3.0.0",
-    "util-deprecate": "^1.0.2",
-    "vue-demi": "^0.12.5",
-    "vue": "^3.2.34",
-    "vite": "^2.9.9",
     "ts-debounce": "^4.0.0",
     "uc.micro": "^1.0.6",
+    "universalify": "^2.0.0",
     "upath": "^2.0.1",
-    "vuepress-vite": "^2.0.0-beta.45",
+    "util-deprecate": "^1.0.2",
+    "vite": "^2.9.9",
+    "vue": "^3.2.34",
+    "vue-demi": "^0.12.5",
     "vue-router": "^4.0.15",
+    "vuepress-plugin-demo-container": "^0.2.0",
+    "vuepress-vite": "^2.0.0-beta.45",
     "wcwidth": "^1.0.1",
     "which": "^2.0.2"
   },
